# gravity

./: Cargo.toml  README.md  justfile
data/: justfile  org.stardustxr.Gravity.desktop  org.stardustxr.Gravity.metainfo.xml
src/: main.rs
