[package]
name = "stardust-xr-gravity"
version = "0.4.1"
edition = "2021"
description = "Utility to launch apps and stardust clients spatially"
authors = ["Nova King <technobaboo@proton.me>"]
license = "MIT"
repository = "https://github.com/StardustXR/gravity"

[[bin]]
name = "gravity"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.27.0", features = ["rt"] }
glam = { version = "0.24.0", features = ["mint"] }
clap = { version = "4.2.4", features = ["derive"] }
nix = { version = "0.26.2", default-features = false, features = ["process"] }
ustr = "0.9.0"
stardust-xr-fusion = "0.39.0"

[patch.crates-io]
stardust-xr-fusion = { path = "../../core/fusion" }