[package]
name = "stardust-xr-gravity"
version = "0.4.1"
edition = "2021"
description = "Utility to launch apps and stardust clients spatially"
authors = ["Nova King <technobaboo@proton.me>"]
license = "MIT"
repository = "https://github.com/StardustXR/gravity"

[[bin]]
name = "gravity"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38.0", features = ["rt"] }
glam = { version = "0.28.0", features = ["mint"] }
clap = { version = "4.5.7", features = ["derive"] }
nix = { version = "0.29.0", default-features = false, features = ["process"] }
ustr = "1.0.0"

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"
